--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
     "firebase": "^11.0.1",
+    "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.456.0",
