--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
       {
         "path": "/api/cron",
         "schedule": "0 14 * * 0"
+      },
+      {
+        "path": "/api/cron/daily",
+        "schedule": "16 14 * * *"
       }
     ]
-  }
+}
