--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "crons": [
       {
-        "path": "/api/cron/reports",
+        "path": "/api/cron/weekly",
         "schedule": "0 0 * * 0"
       },
       {
-        "path": "/api/cron/reports",
+        "path": "/api/cron/daily",
         "schedule": "16 14 * * *"
       }
     ]
